# AgentPass

./: .gitignore  .npmrc  README.md  README.zh-CN.md  RELEASE_NOTES.md  USAGE.zh-CN.md  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json  untitled.pen  vitest.config.ts
.github/workflows/: pages.yml  release.yml
apps/daemon/: build.mjs  package.json  tsconfig.json
apps/daemon/src/: config.ts  index.ts  server.test.ts  server.ts  wiring.ts
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  SyncModal.tsx  TitleBar.tsx  api.ts  i18n.tsx  lock.ts  main.tsx  theme.css  updater.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/mcp-server/: package.json
apps/mcp-server/src/: client.ts  index.ts
brand/: ICON.md
brand/logo/: README.md
docker/: docker-compose.dev.yml
docs/: api.md  architecture.md  mcp-tools.md  open-source-reuse.md  rotation-model.md  security-model.md  sync-model.md  updates.md
docs/assets/: README.md
landing/: index.html
src/: agentpass.test.ts  index.ts  ssh.ts  store.ts
